--- a/sampleref.html
+++ b/sampleref.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><center>
-<title>login</title>
+<title>Login</title>
 <head>
 	<!-- <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@900&display=swap" rel="stylesheet"> -->
@@ -21,8 +21,9 @@
 <link href="onlinecss.css" rel="stylesheet"> 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Khula:wght@800&display=swap" rel="stylesheet">
 
-<script type="text/javascript" src="sampleJS.js"></script> 
 
 </head>
 <body>
@@ -38,13 +39,12 @@
 			<div class="social-container">
 				<a href="#" class="social"><i class="fa fa-facebook aria-hidden"></i></a>
 				<a href="#" class="social"><i class="fa fa-twitter aria-hidden"></i></a>
-			
 			</div>
 			<center><span>or use your account</span></center>
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
 			<center><!-- <p>New User?<a href="#" onclick="document.getElementById('login-form').style.display = 'none'; "><r class="underline">Register</r></a></p> -->
-				<p>New User?<a href="#" onclick="document.getElementById('login-form').style.display = 'none'; "><r class="underline">Register</r></a></p>
+				<p>New User?<a href="#" onclick="document.getElementById('login-form').style.display = 'none'; " class="underline">Register</a></p>
 			</center>
 			<button>Log in</button>
 		</form>
@@ -71,7 +71,7 @@
 			<span>or use your account</span>
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
-			<p>Already have an account!<a href="#" onclick="document.getElementById('login-form').style.display = 'block'; "><r class="underline">Login</r></a></p>
+			<p>Already have a n account?<a href="#" onclick="document.getElementById('login-form').style.display = 'block'; " class="underline">Login</u></a></p>
 			<button>Register</button>
 		</form>
 
